--- a/app/views/static/index.erb
+++ b/app/views/static/index.erb
@@ -1,8 +1,14 @@
-<h1>URL Shortener</h1>
+<h1>URL Shortener!</h1>
 <p>See Me in views/static/index.html.erb</p>
 
 <form action="/urls" method="post">
   Enter URL:
   <input type = "text" name = "long_url">
-  <input type = "submit" value = "Submit">
+  <input type = "submit" value = "GO!">
 </form>10
+
+<% @urls.each do |url| %>
+  <p><%= url.url %>
+    <span><%= url.shortened_url %></span>
+  </p>
+<% end %>
